--- a/README
+++ b/README
@@ -5,4 +5,4 @@ samuel.waggoner@gmail.com
 
 Caffeine README
 
-Caffeine is intended to be a simple 2D tile-based game engine written in Java.  Its focus is to take advantage of abstraction provided by Java will remaining light-weight and flexible to different tile-based games.
+Caffeine is intended to be a simple 2D tile-based game engine written in Java.  Its focus is to take advantage of abstraction provided by Java to remain light-weight and flexible for different tile-based games.
