--- a/README
+++ b/README
@@ -5,4 +5,5 @@ samuel.waggoner@gmail.com
 
 Caffeine README
 
-Caffeine is intended to be a simple 2D tile-based game engine written in Java.  Its focus is to take advantage of abstraction provided by Java will remaining light-weight and flexible to different tile-based games.
+Caffeine is intended to be a simple 2D tile-based game engine written in Java.
+The primary focus is to apply abstractions provided by Java while remaining light-weight and flexible as a template for various types of tile-based games.
